<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="retourCompte"
        android:text="@string/back"
        android:layout_marginTop="@dimen/small_padding" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:src="@drawable/ic_camera"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/name"
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/name" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/first_name" />

    <TextView
        android:id="@+id/email"
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email" />

    <TextView
        android:id="@+id/password"
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password" />


    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_padding"
        android:onClick="modifCompte"
        android:text="Modifier" />


</android.support.v7.widget.LinearLayoutCompat>