<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="retour"
        android:text="@string/back"
        android:layout_marginTop="@dimen/small_padding" />

    <EditText
        android:id="@+id/login"
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_padding"
        android:hint="@string/email"
        android:paddingTop="@dimen/small_padding"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="@dimen/small_padding"
        />

    <EditText
        android:id="@+id/password_validation"
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password_validation"
        android:inputType="textPassword"
        android:paddingTop="@dimen/small_padding"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_padding"
        android:onClick="valider"
        android:text="@string/confirm" />

</android.support.v7.widget.LinearLayoutCompat>