<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/searchViewAAP"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="top" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backAAP"
        android:text="@string/back" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ajoutAmi"
            android:contentDescription="Button Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:onClick="ajoutAmi"
            app:srcCompat="@android:drawable/ic_input_add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/previousAAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="previousAAP"
            android:contentDescription="Button Previous"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <ImageView
            android:id="@+id/imageViewAAP"
            android:layout_width="270dp"
            android:layout_height="233dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="Picture"
            app:srcCompat="@mipmap/creatures_round" />

        <ImageButton
            android:id="@+id/nexAAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="nextAAP"
            android:contentDescription="Button Next"
            app:srcCompat="@android:drawable/ic_media_next" />

    </LinearLayout>

    <TextView
        android:id="@+id/mailAAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/loginAAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />



</android.support.v7.widget.LinearLayoutCompat>