<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/backDAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backDAP"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/back" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

            <ImageButton
                android:id="@+id/accpet"
                android:contentDescription="Button Accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:onClick="acceptFriend"
                app:srcCompat="@android:drawable/checkbox_on_background" />

            <ImageButton
                android:id="@+id/delete"
                android:contentDescription="Button Delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:onClick="refuseFriend"
                app:srcCompat="@android:drawable/ic_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="previousDAP"
            android:contentDescription="Button Previous"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <ImageView
            android:id="@+id/imageViewDAP"
            android:layout_width="270dp"
            android:layout_height="233dp"
            app:srcCompat="@mipmap/creatures_round"
            android:contentDescription="Picture"
            android:layout_gravity="center_horizontal"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="nextDAP"
            android:contentDescription="Button Next"
            app:srcCompat="@android:drawable/ic_media_next" />

    </LinearLayout>

    <TextView
        android:id="@+id/emailDAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/loginDAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />



</android.support.v7.widget.LinearLayoutCompat>