<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="top" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backGLAP"
        android:text="@string/back" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/best_friend"
            android:contentDescription="Button Best Friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:onClick="best_friend"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/delete"
            android:contentDescription="Button Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:onClick="delete_friend"
            app:srcCompat="@android:drawable/ic_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="previousGLAP"
            android:contentDescription="Button Previous"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="270dp"
            android:layout_height="233dp"
            app:srcCompat="@mipmap/creatures_round"
            android:contentDescription="Picture"
            android:layout_gravity="center_horizontal"/>

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="nextGLAP"
            android:contentDescription="Button Next"
            app:srcCompat="@android:drawable/ic_media_next" />

    </LinearLayout>

    <TextView
        android:id="@+id/emailGLAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/loginGLAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</android.support.v7.widget.LinearLayoutCompat>